# v-star

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  benchmark.py  benchmark_pandas.py  benchmark_polars.py  go.mod
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
cmd/generate/: main.go
cmd/v-star/: main.go
cmd/v-star/commands/: bench.go  montecarlo.go  read.go  serve.go
docs/: ROADMAP.md  index.html
docs/assets/: main.js  styles.css
examples/csv_valuation/: main.go
examples/monte_carlo_risk/: main.go
examples/python_bridge/: README.md  demo.ipynb  pyproject.toml  vstar.py
examples/python_bridge/src/vstar_py/: __init__.py
examples/quickstart/: main.go
pkg/annuities/: annuity.go  annuity_test.go  doc.go
pkg/concurrency/: doc.go  worker_pool.go  worker_pool_test.go
pkg/mortality/: doc.go  table.go  table_test.go
pkg/rates/: actuarial_test.go  doc.go  rates.go  rates_test.go  valuation.go  valuation_test.go
pkg/reader/: bench_test.go  census.go  csv.go  csv_test.go  doc.go  models.go  parse_test.go  streaming.go
pkg/reserves/: doc.go  reserve.go  reserve_test.go
pkg/risk/: doc.go  risk.go  risk_test.go
pkg/server/: server.go  server_test.go
pkg/stochastic/: doc.go  rates.go  rates_test.go
pkg/writer/: doc.go  json.go  json_test.go
