[project]
name = "vstar-py"
version = "0.5.0"
description = "Python wrapper for v-star actuarial engine"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "v-star team", email = "nkalolang@proton.me"}]
keywords = ["actuarial", "insurance", "finance", "monte-carlo", "var"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest", "build"]
server = ["requests"]

[project.urls]
Homepage = "https://github.com/lubasinkal/v-star"
Repository = "https://github.com/lubasinkal/v-star"
Issues = "https://github.com/lubasinkal/v-star/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vstar_py"]

[tool.hatch.build.targets.sdist]
include = ["src/vstar_py"]
exclude = ["tests", "*.test*.py"]